fix: issue with link overlap at some sizes

--- a/_src/styles/global.css
+++ b/_src/styles/global.css
@@ -54,6 +54,10 @@ main {
 	/*color: var(--accentColor);*/
 }
 
+.title-line a:first-of-type {
+	position: relative;
+}
+
 a {
 	font-style: italic;
 	color: var(--resurrection);
